fixed some wording issues and hard reset the line spacing

--- a/css/2-base/_base.sass
+++ b/css/2-base/_base.sass
@@ -10,7 +10,6 @@ html
   color: $main
 body
   font-size: 1.2em
-  line-height: 0
   overflow-x: hidden
   @media only screen and (min-width: 200px)
     font-size: 1.4em
